* fixed echoping test call to be compatible with echoping 6 -- tobi
* create a log entry when there are zero replies from a device. -- tobi
* maintaining trunk and branch is not realy sensible the way smokeping evolves. 
  I have merged everything back to trunk -- tobi
* Allow several Mailservers to be specified in Mailhost -- tobi
* Reduce timeout for Net::SMTP to 5 seconds. -- tobi
* new feature to color the graph background in sync with the loss -- grahame.bo
* new probe JunOS Telnet ping -- Shan Ali Khan shanali *singtel.com

2006/07/14 -- released version 2.0.9

* added matchers CheckLatency and CheckLoss -- tobi, from Dylan Vanderhoof DylanV semaphore.com
* added TacacsPlus probe -- tobi, from Gary.Mikula * nasd.com
* pass 'prevmatch' to alert matcher plugins.
  -- niko, from Dylan Vanderhoof <DylanV *semaphore.com>
* fix subject in tSmoke 'morning' emails.  --niko, 
   from Jean-Philippe Luiggi <Jean-Philippe.Luiggi *revolutionlinux.com>
* AnotherDNS.pm: added option 'require_answers' for testing
  recursive DNS servers. -- niko
* fixed loss_color documentation (this is not in percent) -- tobi
* brought back the FPing.pm 'timeout' parameter, since it does something
   after all. -- niko, requested by Peter Klausner <peter.klausner *gmail.com>
* fix running an external program on edge-triggered alerts.
  -- niko, from Peter Klausner <peter.klausner *gmail.com>

2006/04/14 -- released version 2.0.8

* adjusted links to new home on oss.oetiker.ch
  -- tobi

* let the name of the dns server be configured in DNS.pm
  -- ark <yesv *ring.wtwf.com>
* make buggy_perl_version test work again
  -- niko, noticed by Fran Boon <flavour *partyvibe.com>

2006/02/09 -- released version 2.0.7

* fixed POD markup escaping in 'linkstyle' documentation that broke the Smokeping
  module documentation --niko

2006/02/08 -- released version 2.0.6

* make the way CGI self-referring links are created configurable, and
  change the default (once more) to 'linkstyle = relative' 